test/errors/include1.input.asm

    lda #0
!include "macrosxxxxinexistentfile.asm"
    lda #1
